/* Copyright 2020 The FedLearner Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "fedlearner_webconsole/proto/common.proto";

package fedlearner_webconsole.proto;


message JobDependency {
  enum DependencyType {
    UNSPECIFIED = 0;
    ON_COMPLETE = 1;
    ON_START = 2;
    MANUAL = 3;
  }
  string source = 1;
  DependencyType type = 2;
}

message Job {
  enum JobType {
    UNSPECIFIED = 0;
    RAW_DATA = 1;
    DATA_JOIN = 2;
    PSI_DATA_JOIN = 3;
    NN_MODEL_TRANINING = 4;
    TREE_MODEL_TRAINING = 5;
    NN_MODEL_EVALUATION = 6;
    TREE_MODEL_EVALUATION = 7;
  }

  string name = 1;
  JobType type = 2;
  // federated jobs must be started on both side simultaneously
  bool is_federated = 3;
  repeated Variable variables = 4;
  repeated JobDependency dependencies = 5;
  string template = 6;
}

message Workflow {
  repeated Variable variables = 1;
  repeated Job jobs = 2;
}